--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,5 @@
-# Default NAMESPACE created by R
-# Remove the previous line if you edit this file
-
-# Export all names
-exportPattern(".")
-
-# Import all packages listed as Imports or Depends
+useDynLib(bisoreg)
+exportPattern("^[a-zA-Z]")
 import(
   bootstrap,
   monreg,
