--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: bisoreg
 Type: Package
 Title: Bayesian Isotonic Regression with Bernstein Polynomials
-Version: 1.1
-Date: 2012-12-26
+Version: 1.4
+Date: 2015-03-15
 Author: S. McKay Curtis <s.mckay.curtis@gmail.com>
 Maintainer: S. McKay Curtis <s.mckay.curtis@gmail.com>
-Depends: R (>= 2.7.0), bootstrap, monreg, R2WinBUGS, coda
-Description: Bayesian monotonic regression function
+Depends: R (>= 2.7.0), bootstrap, monreg, R2WinBUGS, coda (>= 0.17.1)
+Description: Provides functions for fitting Bayesian monotonic regression models to data.
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2012-12-27 02:26:58 UTC; McKay
+NeedsCompilation: yes
+Packaged: 2015-03-19 00:44:35 UTC; McKay
 Repository: CRAN
-Date/Publication: 2012-12-27 06:15:38
+Date/Publication: 2015-03-19 06:47:09
